# doogat-core

./: .buildinfo  .gitignore  AGENTS.md  README.md  genindex.html  index.html  print_zettel_use_case.html  pyproject.toml  renovate.json  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  print_zettel_use_case.doctree
.github/workflows/: build-pre-release-pypi-package.yml  build-pypi-package.yml  build-release-pypi-package.yml  deploy-docs.yml  release.yml
dev/docs/: versioning.md
docs/source/: conf.py
src/doogat/core/: __init__.py
src/doogat/core/application/use_cases/: read_doogat_use_case.py
src/doogat/core/domain/entities/project/: project.py
src/doogat/core/domain/entities/project/services/consistency/: project_zettel_consistency_service.py
src/doogat/core/domain/entities/project/services/consistency/fixers/: fix_lists_bullets.py  normalize_sections_order.py  set_default_completed.py
src/doogat/core/domain/entities/project/services/migration/: project_zettel_migration_service.py
src/doogat/core/domain/entities/project/services/migration/upgrades/: migrate_loop_log.py  migrate_parent_reference.py
src/doogat/core/domain/entities/zettel/: zettel.py
src/doogat/core/domain/entities/zettel/services/consistency/: zettel_consistency_service.py
src/doogat/core/domain/entities/zettel/services/consistency/fixers/: align_h1_to_title.py  fix_title_format.py  normalize_type.py  remove_duplicate_tags.py  set_default_date.py  set_default_id.py  set_default_tags.py  set_default_type.py
src/doogat/core/domain/entities/zettel/services/migration/: zettel_migration_service.py
src/doogat/core/domain/entities/zettel/services/migration/upgrades/: move_tag_to_tags.py  move_zkn_id_to_id.py  normalize_type.py
src/doogat/core/domain/interfaces/: zettel_repository_exceptions.py
src/doogat/core/domain/services/: doogat_factory.py
src/doogat/core/domain/value_objects/: zettel_data.py
src/doogat/core/infrastructure/formatting/markdown_zettel_formatter/: helpers.py  markdown_zettel_formatter.py
src/doogat/core/infrastructure/persistence/file_parsers/: zettel_file_parser.py
src/doogat/core/infrastructure/persistence/file_parsers/parsers/markdown/: back_matter_preprocessor.py  front_matter_preprocessor.py  helpers.py  markdown.py
tests/application/: test_print_zettel_use_case.py  test_read_doogat_use_case.py
tests/entities/project/: test_fix_lists_bullets.py  test_migrate_loop_log.py  test_normalize_sections_order.py  test_project_zettel.py
tests/entities/zettel/: test_align_h1_to_title.py  test_fix_title_format.py  test_move_tag_to_tags.py  test_move_zkn_id_to_id.py  test_normalize_type.py  test_remove_duplicate_tags.py  test_set_default_date.py  test_set_default_id.py  test_set_default_processed.py  test_set_default_publish.py  test_set_default_tags.py  test_set_default_title.py  test_set_default_type.py  test_sort_tags.py  test_zettel.py  test_zettel_consistency_service.py  test_zettel_migration_service.py
tests/infrastructure/formatting/markdown/: test_helpers.py
tests/interfaces/: test_zettel_formatter.py  test_zettel_repository.py  test_zettel_repository_exceptions.py
tests/services/: test_doogat_factory.py
tests/value_objects/: test_zettel_data.py
