[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doogat-core"
version = "0.2.1"
description = ""
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Tomáš Bouška", email = "admin@doogat.com" }]
requires-python = ">=3.12,<4.0"
dependencies = ["buvis-pybase>=0.9.0,<1.0.0"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "python-semantic-release>=10.5.3,<11.0.0"]
test = ["pytest>=9.0.2", "pytest-mock>=3.15.1"]
docs = ["sphinx>=9.1.0", "sphinx-rtd-theme>=3.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/doogat"]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
buvis-pybase = { index = "test-pypi" }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
major_on_zero = false
commit_parser = "conventional"
tag_format = "v{version}"
commit_message = "chore(release): {version}"
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "master"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
ignore_merge_commits = true
parse_squash_commits = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*\))?: .*''',
    '''ci(?:\([^)]*\))?: .*''',
    '''docs(?:\([^)]*\))?: .*''',
    '''test(?:\([^)]*\))?: .*''',
    '''build(?:\([^)]*\))?: .*''',
    '''refactor(?:\([^)]*\))?: .*''',
    '''style(?:\([^)]*\))?: .*''',
]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.ruff.lint]
extend-select = ["B", "Q", "D"]
ignore = ["D211", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*.py" = ["S101"]
"**/{tests,docs,tools}/*" = ["D"]
