[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doogat-core"
version = "0.2.1"
description = ""
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Tomáš Bouška", email = "admin@doogat.com" }]
requires-python = ">=3.12,<4.0"
dependencies = ["buvis-pybase>=0.3.0,<1.0.0"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "tbump>=6.11.0", "toml>=0.10.2"]
test = ["pytest>=9.0.2", "pytest-mock>=3.15.1"]
docs = ["sphinx>=9.1.0", "sphinx-rtd-theme>=3.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/doogat"]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
buvis-pybase = { index = "test-pypi" }

[tool.ruff.lint]
extend-select = ["B", "Q", "D"]
ignore = ["D211", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*.py" = ["S101"]
"**/{tests,docs,tools}/*" = ["D"]
